# educagil

./: README.md  pyproject.toml
core/: settings.py  urls.py
teacher/: models.py  serializers.py  urls.py  views.py  viewsets.py
teacher/migrations/: 0001_initial.py  0002_initial.py
user/: models.py  serializers.py
user/migrations/: 0001_initial.py
user/tests/: test_create_user.py
